samples/_failures_safe/1761598383_baa7b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b08c7169.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b08c7169.c:150:9: error: expected expression at end of input
  150 |         if (!
      |         ^~
./samples/SAFE/__tmp_b08c7169.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b08c7169.c:150:9: error: expected declaration or statement at end of input
